--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,30 +1,45 @@
 .header {
-  padding: 0em 2em;
-  display: grid;
-  min-height: 100px;
-  grid-auto-flow: column;
-  background-color: lightblue;
+  display: flex;
+  height: 60px;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2em;
 }
 
 .logo {
-  display: grid;
-  justify-content: start;
-  align-content: center;
-  text-transform: uppercase;
-  text-decoration: none;
+  display: flex;
+  height: 100%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  h1 {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    align-items: flex-end;
+    a {
+      text-decoration: none;
+      letter-spacing: 7px;
+    }
+  }
 }
 
 .links {
-  display: grid;
-  justify-content: end;
-  align-content: center;
-  grid-auto-flow: column;
-  grid-gap: 20px;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
 
-  li {
-    list-style-type: none;
-    a {
-      text-decoration: none;
+  ul {
+    display: flex;
+    margin: 0;
+    li {
+      list-style-type: none;
+      padding: 0 1em;
+      margin: 0;
+      a {
+        text-decoration: none;
+      }
     }
   }
 }
