--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,6 +1,7 @@
 .container {
   background: #b0b3b3;
-  height: 100vh;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
   display: grid;
   grid-template-columns: repeat(17, 1fr);
