Min-height instead of height

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,7 +1,7 @@
 .container {
   background: #b0b3b3;
-  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-  height: calc(var(--vh, 1vh) * 100);
+  min-height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  min-height: -webkit-fill-available;
   width: 100vw;
   display: grid;
   grid-template-columns: repeat(17, 1fr);
