--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,5 +1,5 @@
 .container {
-  background: #b0b3b3;
+  background: #3d7575;
   display: grid;
   height: 100vh;
   grid-template-columns: repeat(17, 1fr);
