--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,7 +1,7 @@
 .container {
-  background: #3d7575;
+  background: #194622;
   display: grid;
-  height: 100vh;
+  height: 100%;
   grid-template-columns: repeat(17, 1fr);
   grid-template-rows: repeat(12, 1fr);
   grid-gap: 1px 1px;
