--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,5 +1,5 @@
 .container {
-  background: #194622;
+  background: #b0b3b3;
   display: grid;
   height: 100%;
   grid-template-columns: repeat(17, 1fr);
