--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,7 +1,14 @@
 .container {
-  background: #b0b3b3;
-  display: grid;
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
   height: 100%;
+  background: #b0b3b3;
+}
+
+.containerGrid {
+  height: 100%;
+  display: grid;
   grid-template-columns: repeat(17, 1fr);
   grid-template-rows: repeat(12, 1fr);
   grid-gap: 1px 1px;
@@ -13,6 +20,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 10;
 }
 
 .main {
@@ -21,6 +29,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  z-index: 10;
 }
 
 .social {
@@ -29,5 +38,5 @@
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
+  z-index: 10;
 }
-
