--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -16,9 +16,34 @@
   border-right: 1px solid #c4c4c4;
 }
 
+.trigger {
+  position: absolute;
+  bottom: 50em;
+}
+
+.down {
+  position: absolute;
+  top: 200em;
+}
+
+.color {
+  position: absolute;
+  bottom: 0;
+  height: 0px;
+  width: 100%;
+  background: rgb(197, 155, 155);
+}
+
 .photo {
   grid-column: 8/18;
   grid-row: 1/9;
+  z-index: 10;
+}
+
+.photo2 {
+  grid-column: 8/18;
+  grid-row: 5/13;
+  z-index: 10;
 }
 
 .containerAnimation {
@@ -34,4 +59,13 @@
 .photoEdge {
   grid-column: 1;
   grid-row: 6/13;
+  z-index: 10;
+  object-fit: cover;
+  background-color: white;
+}
+
+.photoEdge2 {
+  grid-column: 1;
+  grid-row: 1/8;
+  z-index: 10;
 }
