Better UI without hiding Address bar on scroll for mobile users

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,9 +1,11 @@
 .container {
   position: fixed;
-  overflow: hidden;
+
   width: 100%;
   height: 100%;
   background: #b0b3b3;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .containerGrid {
