--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -14,6 +14,7 @@
   grid-column: 1/7;
   grid-row: 1/13;
   border-right: 1px solid #c4c4c4;
+  z-index: 10;
 }
 
 .trigger {
@@ -31,7 +32,7 @@
   bottom: 0;
   height: 0px;
   width: 100%;
-  background: rgb(197, 155, 155);
+  background: rgb(119, 113, 113);
 }
 
 .photo {
