--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -10,12 +10,6 @@
   }
 }
 
-.container {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-}
-
 .box {
   grid-column: 1/7;
   grid-row: 1/13;
@@ -25,12 +19,14 @@
 
 .trigger {
   position: absolute;
-  bottom: 50em;
+  height: 200%;
+  opacity: 0;
 }
 
 .down {
   position: absolute;
   top: 200em;
+  opacity: 0;
 }
 
 .color {
